--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,49 @@
             </div>
         </div>
     
+        <!-- chat -->
+        <!-- TODO --> 
+
+        <!-- prompt -->
+        <div id="prompt" class="border-top pt-3 pb-1">
+            <div class="container">
+                <div class="row">
+                    <div class="col-2 text-end">
+                        <div class="mb-2">
+                            <button type="button" id="prompt-voice-input" class="btn btn-outline-primary" title="Voice input">
+                                <i class="bi bi-mic"></i>
+                            </button>
+                        </div>
+                        <div>
+                            <button type="button" id="prompt-speak" class="btn btn-outline-primary" title="Speak answers">
+                                <i class="bi bi-volume-up"></i>
+                            </button> 
+                        </div>
+                    </div>
+                    <div class="col-8">
+                        <div class="form-floating">
+                            <textarea id="prompt-input" class="form-control" placeholder="Your prompt..."></textarea>
+                            <label for="prompt-input">Your prompt...</label>
+                        </div>
+                    </div>
+                    <div class="col-2 text-start">
+                        <div class="mb-2">
+                            <button type="button" id="prompt-submit" class="btn btn-primary" title="Submit prompt">
+                                <i class="bi bi-send"></i>
+                            </button>
+                        </div>
+                        <div>
+                            <button type="button" id="prompt-options" class="btn btn-outline-secondary" title="Options">
+                                <i class="bi bi-gear"></i>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
+        <!-- options screen -->
+        <!-- TODO -->
 
         <!-- script -->
         <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
