--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
         <title>local-llm-chat</title>
         <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="node_modules/bootstrap-icons/font/bootstrap-icons.min.css">
-        <link rel="stylesheet" href="main.css">
+        <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
         <!-- navbar -->
@@ -154,7 +154,8 @@
         <!-- script -->
         <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
         <script src="node_modules/marked/marked.min.js"></script>
-        <script src="ui.js"></script>
-        <script type="module" src="main.js"></script>
+        <script src="js/ui/loading.js"></script>
+        <script src="js/ui/options.js"></script>
+        <script type="module" src="js/main.js"></script>
     </body>
 </html>
