--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>local-llm-chat</title>
+        <link rel="icon" type="image/svg+xml" href="favicon.svg" />
         <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="node_modules/bootstrap-icons/font/bootstrap-icons.min.css">
         <link rel="stylesheet" href="css/main.css">
+        <title>local-llm-chat</title>
     </head>
     <body>
         <!-- navbar -->
