--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
         </div>
     
         <!-- chat -->
-        <!-- TODO --> 
+        <div id="chat"></div>
 
         <!-- prompt -->
         <div id="prompt" class="border-top pt-3 pb-1">
@@ -234,9 +234,11 @@
         <!-- script -->
         <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
         <script src="node_modules/marked/marked.min.js"></script>
-        <script src="js/ui/loading.js"></script>
+        <script src="node_modules/dompurify/dist/purify.min.js"></script>
         <script src="js/ui/options.js"></script>
         <script src="js/ui/theme.js"></script>
+        <script src="js/ui/loading.js"></script>
+        <script src="js/ui/chat.js"></script>
         <script type="module" src="js/main.js"></script>
     </body>
 </html>
