--- a/src/index.html
+++ b/src/index.html
@@ -239,6 +239,7 @@
         <script src="js/ui/theme.js"></script>
         <script src="js/ui/loading.js"></script>
         <script src="js/ui/chat.js"></script>
+        <script src="js/messages.js"></script>
         <script type="module" src="js/main.js"></script>
     </body>
 </html>
