--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,11 @@
                 <span class="navbar-brand mb-0 h1">
                     <i class="bi bi-chat text-primary"></i> local-llm-chat
                 </span>
+                <div class="d-flex justify-content-end">
+                    <button type="button" id="prompt-clear" class="btn btn-outline-secondary" title="Clear">
+                        <i class="bi bi-trash"></i>
+                    </button>
+                </div>
             </div>
         </nav>
 
@@ -239,7 +244,8 @@
         <script src="js/ui/theme.js"></script>
         <script src="js/ui/loading.js"></script>
         <script src="js/ui/chat.js"></script>
+        <script src="js/ui/prompt.js"></script>
         <script src="js/messages.js"></script>
-        <script type="module" src="js/main.js"></script>
+        <script type="module" src="js/inference.js"></script>
     </body>
 </html>
