tts from local-translator

--- a/src/index.html
+++ b/src/index.html
@@ -246,6 +246,7 @@
         <script src="js/ui/chat.js"></script>
         <script src="js/ui/prompt.js"></script>
         <script src="js/messages.js"></script>
+        <script src="js/tts.js"></script>
         <script type="module" src="js/inference.js"></script>
     </body>
 </html>
