--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
                     <i class="bi bi-chat text-primary"></i> local-llm-chat
                 </span>
                 <div class="d-flex justify-content-end">
-                    <button type="button" id="prompt-clear" class="btn btn-outline-secondary" title="Clear">
+                    <button type="button" id="prompt-clear" class="btn btn-sm btn-outline-secondary" title="Clear">
                         <i class="bi bi-trash"></i>
                     </button>
                 </div>
@@ -240,13 +240,6 @@
         <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
         <script src="node_modules/marked/marked.min.js"></script>
         <script src="node_modules/dompurify/dist/purify.min.js"></script>
-        <script src="js/ui/options.js"></script>
-        <script src="js/ui/theme.js"></script>
-        <script src="js/ui/loading.js"></script>
-        <script src="js/ui/chat.js"></script>
-        <script src="js/ui/prompt.js"></script>
-        <script src="js/messages.js"></script>
-        <script src="js/tts.js"></script>
-        <script type="module" src="js/inference.js"></script>
+        <script type="module" src="js/app.mjs"></script>
     </body>
 </html>
