--- a/src/index.html
+++ b/src/index.html
@@ -106,6 +106,7 @@
                             <div class="form-floating mb-3">
                                 <select id="options-model" class="form-select">
                                     <option value="QVikhr-2.5-1.5B">QVikhr-2.5-1.5B</option>
+                                    <option value="Phi-3.5-mini-instruct">Phi-3.5-mini-instruct</option>
                                 </select>
                                 <label for="options-model">Model</label>
                             </div>
