--- a/src/index.html
+++ b/src/index.html
@@ -53,8 +53,13 @@
                 <div class="row">
                     <div class="col-2 text-end">
                         <div class="mb-2">
-                            <button type="button" id="prompt-voice-input" class="btn btn-outline-primary" title="Voice input">
+                            <button type="button" id="prompt-voice-input" class="btn btn-outline-primary" title="Voice input" disabled="disabled">
                                 <i class="bi bi-mic"></i>
+                            </button>
+                        </div>
+                        <div class="mb-2">
+                            <button type="button" id="prompt-speak" class="btn btn-outline-primary" title="Speak assistant answers">
+                                <i class="bi bi-volume-up"></i>
                             </button>
                         </div>
                     </div>
